# fans

./: .gitignore  Procfile  main.py  pyproject.toml  readme.md  requirements.txt
.deta/: prog_info  state
configs/: db.py  settings.py
data/models/: fan.py  idol.py  image.py  item.py  source.py  video.py
data/repository/: fan_repository.py
fans/: main.py
fans/configs/: db.py
fans/data/models/: idol.py  source.py  video.py
fans/routes/: graphql_route.py  idol_route.py
fans/services/: idol_service.py
routes/: fan_route.py  graphql_route.py  idol_route.py
services/: idol_service.py
tests/: test_fans.py
